js complete, calculator is functional

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <input type="text" id="kg" > <br/>
         <input type="submit" id="submit" value="Calculate"> <br/><br/>
 
+        <div id="result"></div>
+
         <div id="weightguide">
             <h2>BMI Weight Guide</h2>
             Under Weight = Less than 18.6<br/>
